--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "dev": "nodemon src/app.js"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "mongoose": "^8.18.0"
   }
 }
